  - Fix with spawnregion data. UShort != UInt
  - Added socket.denymove to send packets to deny movement
  - Fixed a crashbug with invalid function names passed to .addtimer()
  - Added the ability to make yourself visible to other players.
  - Guildbutton now triggers onGuildButton(player) python event.
  - Fixed bug #0000376. (Stablemasters don't take money from the bank)
 * Definition Changes:
  - Added the mage AI to most creatures.
  - Adjusted carving sheeps.
  - Fixed leatherworkers and tanners not buying leather and hides.
  - Male NPCs now have a 75% chance of getting a beard when created.
  - Made shrink potions craftable.
  - Changed the color of shrink potions.
  - Added Tokuno includes for regions and spawnregions.
  - Removed the "Pink Spawn" from decoration.
 * Python Script Changes:
  - Fixed bug #0000369. (Equip possible although item.movable = 3)
  - Fixed bug #0000361. (Pets don't follow trough gate)
  - Added xoffset, yoffset and zoffset to socket.attachmultitarget. (housing.deed)
  - Fixed a runebook bug. (Refuses to work when full)
  - Rewrote parts of the runebook.
  - Added support for creature based poison immunity.
  - Added support for hit based poisoning.
  - Fixed several bugs in lumberjacking.
  - Chars will now get revealed when using training dummy or archery butte.
  - Fixed blood created at carving not decaying for a long time.
  - Fixed fishing pole not wearing out.
  - Fixed gainfactor for skills always beeing 1.0
  - Fixed a skill check bug with lumberjacking.
  - Implemented shrink potions.
  - Fixed the tooltip of alchemy tools not being resend.
  - Fixed the input system trying to call not existent scripts.
  - Fixed the color of shrunken pets.
  - Implemented shrink command.
  - Implemented telem command.
  - Added onConnect to system.players
  - Fixes for moongate.py
  - Guild button now opens guildstone menu by default.
  - Fixed resistances for dragon scale armors.
  - Fixed the open door macro.