@@ -3310,11 +3310,14 @@ bool cBaseChar::isInnocent()
 
 void cBaseChar::refreshMaximumValues()
 {
-	if ( objectType() == enPlayer )
-		maxHitpoints_ = wpMax<ushort>( 1, ( ( strength_ ) / 2 ) + hitpointsBonus_ + 50 );
+	if ( Config::instance()->refreshMaxValues() )
+	{
+		if ( objectType() == enPlayer )
+			maxHitpoints_ = wpMax<ushort>( 1, ( ( strength_ ) / 2 ) + hitpointsBonus_ + 50 );
 
-	maxStamina_ = wpMax<ushort>( 1, dexterity_ + staminaBonus_ );
-	maxMana_ = wpMax<ushort>( 1, intelligence_ + manaBonus_ );
+		maxStamina_ = wpMax<ushort>( 1, dexterity_ + staminaBonus_ );
+		maxMana_ = wpMax<ushort>( 1, intelligence_ + manaBonus_ );
+	}
 }
 
 bool cBaseChar::lineOfSight( P_CHAR target, bool debug )
